# file-system-simulater

./: .gitignore  CMakeLists.txt  LICENSE  README.md  base_object.cpp  base_object.h  directory.cpp  directory.h  file.cpp  file.h  fileSystem.bat  file_manager_system.cpp  file_system_manager.h  main.cpp  report.txt  utils.cpp  utils.h
FileSystemSimulator/: FileSystemSimulator.sln
FileSystemSimulator/FileSystemSimulator/: BaseObject.cpp  BaseObject.h  Directory.cpp  Directory.h  File.cpp  File.h  FileSystemManager.cpp  FileSystemManager.h  FileSystemSimulator.cpp  FileSystemSimulator.vcxproj  Utils.cpp  Utils.h
